# fungiclef2024

./: .gitignore  README.md  fungiclef_labels.ipynb  fungiclef_pytorch_efficientnet.ipynb  results.md
fungiclef-effnet/: README.md  augmentations.py  choose_openset_recognition_discriminator.py  closedset_model.py  competition_metrics.py  create_embeddings_openset_recognition.py  create_opengan_discriminator.py  datasets.py  evaluate.py  evaluate_multiple_types.py  evaluate_multiple_types_val_test_w_entropy.py  evaluate_temp_scaled.py  fine_tune_on_unknown.py  losses.py  model.py  model_from_metadata.py  models.py  multiinstance_evaluate.py  paths.py  performance_comparison.py  pyproject.toml  resize_images.py  seesaw_04_02_2024_scores.json  temp_scale_model.py  temperature_scaling.py  test_load_times.py  train.py  train2.py  train_debug.py  train_entropy.py  train_no_hydra.py  train_opengan.py  train_opengan_from_cached_embeddings.py  train_openset_recognition.py  train_progressive.py  train_progressive_metaformer.py  train_temperature_scaling.py  utils.py
fungiclef-effnet/conf/: config.yaml
fungiclef-effnet/data_exploration/: README.md  eda_submission.csv  poisonous_edible_evaluation.py
fungiclef-effnet/input_data_setup/: clean_dataset.py  create_from_folder_dataset.py
fungiclef-effnet/models/: MetaFG_meta.py
fungiclef-effnet/to_incorporate_with_flag/: train_progressive.py
fungiclef-effnet/wip_opengan_variants/: train_opengan_from_cached_embeddings_closed_only.py  train_opengan_from_cached_embeddings_discriminator_only.py  (+4 more)
validation-eval/: calc_metrics.py  (+22 more)
(+9 files in other folders)
